--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,6 +30,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Story image", name: "image", widget: "image" }
       - { label: "Image credits", name: "imageCredits", widget: "string", required: false }
+      - { label: "Short description", name: "shortDescription", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "audio-post"
