--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,7 +58,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
       - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
-      - { label: "Title", name: "title", widget: "string", i18n: true }
+      - { label: "Title (do not change)", name: "title", widget: "string", i18n: true }
       - { label: "Main-image", i18n: true, name: "mainImage", widget: "object", fields: [{label: "Image", name: "image", widget: "image", i18n: duplicate}, { label: "Image credits", name: "imageCredits", widget: "string", required: false, i18n: true }] }
       - { label: "Body", name: "body", widget: "markdown", i18n: true }
 
@@ -69,7 +69,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "contact" }
       - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
-      - { label: "Title", name: "title", widget: "string", i18n: true }
+      - { label: "Title (do not change)", name: "title", widget: "string", i18n: true }
       - { label: "Body", name: "body", widget: "markdown", i18n: true }
 
   - name: "audio"
@@ -79,7 +79,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
       - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
-      - { label: "Title", name: "title", widget: "string", i18n: true }
+      - { label: "Title (do not change)", name: "title", widget: "string", i18n: true }
       - { label: "Body", name: "body", widget: "markdown", i18n: true }
 
   - name: "homepage"
@@ -141,7 +141,7 @@ collections:
     widget: "object"
     fields:
       - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
-      - { label: "Title", name: "title", widget: "string", i18n: duplicate }
+      - { label: "Title (do not change)", name: "title", widget: "string", i18n: duplicate }
       - label: "Column-1"
         i18n: true
         name: "column1"
