--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-remark-copy-linked-files": "^2.3.3",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.7",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.2.2",
