--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   },
   "devDependencies": {
     "cypress": "^6.1.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.2.0",
     "prettier": "^1.19.1"
   },
   "keywords": [
@@ -54,7 +54,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "eslint": "eslint src/**/*.jsx",
+    "eslint": "eslint --ext .jsx,.js 'src/'",
     "eslint:fix": "eslint --ext .jsx,.js --fix ./ --ignore-path .gitignore",
     "cy:run": "cypress run",
     "cy:open": "cypress open"
