test netlify func

--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -4,6 +4,9 @@
   "engines": {
     "node": "8"
   },
+  "scripts": {
+    "build": "npm install"
+  },
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
