--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -6,6 +6,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "nodemailer": "^6.4.14"
