--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,8 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "engines": {
-    "node": "8"
+  "scripts": {
+    "functions": "npm install"
   },
   "main": "index.js",
   "dependencies": {
