--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
+[build]
+  command = "npm run functions"
+  functions = "functions/"
+
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
