--- a/functions/package.json
+++ b/functions/package.json
@@ -8,5 +8,8 @@
     "firebase-functions": "^3.11.0",
     "nodemailer": "^6.4.14"
   },
+  "scripts": {
+    "functions": "cd functions/test && npm install"
+  },
   "private": true
 }
