--- a/functions/package.json
+++ b/functions/package.json
@@ -3,13 +3,11 @@
   "description": "Email notification for comments",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "nodemailer": "^6.4.14"
   },
   "scripts": {
-    "start": "node index.js"
+    "functions": "cd functions && npm install"
   },
   "private": true
 }
